--- a/helloplus/wsv346/styles.css
+++ b/helloplus/wsv346/styles.css
@@ -1,5 +1,5 @@
 .fixed-size-img {
     width: 100%;
-    height: 200px; /* Adjust the height as needed */
-    object-fit: cover; /* Ensures the image covers the area without distortion */
+    height: 200px;
+    object-fit: cover;
 }
