--- a/src/css/japan.css
+++ b/src/css/japan.css
@@ -1,7 +1,8 @@
 /* Nia */
 
 /*Header and bucket icon positioning/styling*/
-.nav-header {
+
+/*.nav-header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -30,6 +31,42 @@
   background-color: white;
   border: none;
   margin-left: auto;
+}
+
+.bucket-icon:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}*/
+
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Align items to the ends */
+  padding: 30px;
+  background-color: beige; /* Add background color for better visibility */
+}
+
+.nav-header .header-text a {
+  font-size: 60px !important;
+  font-family: "Urbanist", sans-serif;
+  font-weight: lighter;
+  color: brown !important;
+  text-decoration: none; /* Remove underline from link */
+}
+
+.navbar-brand-hr {
+  width: 98%;
+  margin: 0 auto;
+  background-color: orange;
+  border: none;
+  height: 5px;
+}
+
+.bucket-icon {
+  transition: transform 0.3s ease;
+  padding: 0;
+  background-color: transparent; /* Make background transparent */
+  border: none;
 }
 
 .bucket-icon:hover {
@@ -120,4 +157,3 @@
   background-color: rgb(75, 52, 25);
   transform: scale(1.02);
 }
-
