--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,3 +33,84 @@
   transform: scale(1.2);
   cursor: pointer;
 }
+
+/*Offcanvas for destinations list*/
+
+.oc-bucket-list {
+  background-color: beige !important;
+  border: none !important;
+  padding: 15px;
+}
+
+.oc-bucket-list-header {
+  background-color: beige !important;
+}
+
+.oc-bucket-list-title {
+  font-family: "Urbanist" !important;
+  font-size: 30px !important;
+  font-weight: lighter;
+}
+
+.destinations-offcanvas-label {
+  font-family: "Urbanist";
+  background-color: beige;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 20px;
+}
+
+.destinations-hr {
+  width: 93%;
+  margin: 0 auto;
+  background-color: rgb(63, 44, 21);
+  border: none;
+  height: 1px;
+}
+
+.list-offcanvas {
+  background-color: beige !important;
+}
+
+.oc-bucket-list-group {
+  padding: 10px !important;
+}
+
+.oc-bucket-list-group-item {
+  display: flex !important;
+  font-family: "Urbanist";
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 10px !important;
+  background-color: rgb(248, 201, 144) !important;
+  cursor: pointer !important;
+  border: 1px solid white !important;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.list-group-item-span {
+  flex-grow: 1;
+}
+
+/* Styles for list items */
+.oc-bucket-list-group-item:hover {
+  background-color: bisque !important;
+  transform: scale(1.02) !important;
+}
+
+.btn-delete-list-item {
+  margin-left: auto;
+  padding-left: 3px;
+  text-align: center;
+  color: whitesmoke;
+  background-color: rgb(165, 121, 68);
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.2s ease, transform 0.2s ease;
+}
+
+.btn-delete-list-item:hover {
+  background-color: rgb(75, 52, 25);
+  transform: scale(1.02);
+}
