--- a/src/css/main.css
+++ b/src/css/main.css
@@ -114,3 +114,66 @@
   background-color: rgb(75, 52, 25);
   transform: scale(1.02);
 }
+
+/*City Cards*/
+.fixed-size-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.city-card {
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
+
+.result-items {
+  height: 16em; 
+  width: 18em;
+}
+
+.city-card-check-box {
+  display: block;
+  padding-left: 17.9em;
+}
+
+.city-card-input{
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin:0;
+  vertical-align: bottom;
+  position: relative;
+  top: -240px;
+  left: -30px;
+  accent-color: rgba(249, 250, 179, 0.238);
+}
+
+/*Accordions*/
+.topSpots-accordion {
+  display: block; 
+  width: 100%;
+}
+
+.centered-nested-accordian-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.nested-accordion-img {
+  width: 200px;
+  height: 200px;
+  align-items: center;
+}
+
+.add-remove-button {
+  display: block;
+  margin-left: auto;
+}
+
+.nested-first {
+  padding: 5px;
+}
