--- a/src/css/main.css
+++ b/src/css/main.css
@@ -200,8 +200,8 @@
 /* for added alert function */
 #alert_box{
     position: absolute;
-    top: 30px;
-    left: 30px;
+    top: 10px;
+    right: 475px;
     display: flex;
     align-items: flex-end;
     flex-direction: column;
@@ -214,7 +214,7 @@
     width: 200px;
     height: 60px;
     background: #fff;
-    font-weight: 500;
+    font-weight: 600;
     margin: 15px 0;
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
     display: flex;
