--- a/src/css/search_bar.css
+++ b/src/css/search_bar.css
@@ -1,12 +1,12 @@
 /*for search bar*/
 .search-bar {
     margin: 20px;
-    max-width: -600px;
+    width: -600px;
     padding-left: 100px;
 }
 
 .search-box {
-    width: 100%;
+    width: 10px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
