--- a/src/components/export-button.html
+++ b/src/components/export-button.html
@@ -19,8 +19,8 @@
 
 <body>
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Get Travel List
+    <button type="button" id="get-list" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Get Bucket List
     </button>
 
     <!-- Modal -->
