--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,8 @@
     background-position: center;
     background-repeat: no-repeat;
     min-height: 100vh;
-    position: relative;
     color: rgb(255, 255, 255);
-    text-shadow: 2px 2px 2px rgba(0,0,0,.2)
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, .2)
 }
 
 h1 {
@@ -16,9 +15,8 @@ h1 {
 
 .color-overlay {
     position: absolute;
-    width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0, 0, 0, .7);
 }
 
 .btn {
