--- a/src/css/dropdowns.css
+++ b/src/css/dropdowns.css
@@ -1,62 +1,4 @@
-/* Sanya */
-.bg-image {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  position: relative;
-  color: rgb(255, 255, 255);
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-/* END FORMATTING OF GREETING*/
-
-.title_page_header {
-  color: white;
-  font-size: 4rem;
-}
-
-.color-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(16, 27, 32, 0.826);
-}
-
-.btn {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  padding: 15px 30px;
-  font-size: 18px;
-  color: white;
-  background-color: darkgray;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.custom-btn:hover {
-  background-color: dimgray;
-}
-
-.pickurcountry_header {
-  padding-top: 80px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgb(255, 255, 255);
-  font-size: 4rem;
-  font-family: "Urbanist";
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+.dropdownbutton-container {}
 
 .dropdown-button {
   color: white;
@@ -70,7 +12,8 @@
   letter-spacing: 3px;
   font-family: "Urbanist";
   border: none;
-  border-radius: 15px; /*rounding out button*/
+  border-radius: 15px;
+  /*rounding out button*/
   transition: background-color 0.3s, transform 0.3s;
 }
 
@@ -78,5 +21,3 @@
   background-color: navy;
   transform: scale(1.05);
 }
-
-/* Sanya */
