--- a/src/components/export-button.css
+++ b/src/components/export-button.css
@@ -1,3 +1,15 @@
+body {
+    background-color: beige !important;
+    text-align: center;
+    letter-spacing: 3px;
+    font-family: "Urbanist" !important;
+    cursor: pointer;
+}
+
 #userForm {
     padding-bottom: 5%;
+}
+
+.mb-3 {
+    text-align: left;
 }
