--- a/src/css/dropdowns.css
+++ b/src/css/dropdowns.css
@@ -5,9 +5,22 @@ body {
   cursor: pointer;
 }
 
+.video-container {
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
+  position: absolute;
+}
+
 .dropdown-button {
   color: white;
-  position: inherit;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   padding: 12px 14px;
   font-size: 28px;
   width: 250px;
